# research_agent

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
design_docs/: hld.md  lld.md  prd.md
src/: claim_store.py  config.py  contradiction_detector.py  debug_utils.py  llm_client.py  llm_logger.py  logger.py  loop_guard.py  main.py  metrics.py  models.py  orchestrator.py  page_fetcher.py  progress.py  prompts.py  query_analyzer.py  report_formatter.py  result_scorer.py  rich_console.py  search_logger.py  selective_extractor.py  sub_query_planner.py  synthesis_engine.py  telemetry.py  text_processor.py  tracing.py  utils.py  web_search.py
src/core/: contradiction_detector.py  orchestrator.py  query_analyzer.py  result_scorer.py  selective_extractor.py  sub_query_planner.py  synthesis_engine.py
src/llm/: llm_client.py
src/monitoring/: async_logger.py  debug_utils.py  llm_logger.py  logger.py  metrics.py  search_logger.py  telemetry.py  tracing.py
src/output/: report_formatter.py
src/search/: web_search.py
src/ui/: dashboard.py  events.py  progress.py  research_tui.py  rich_console.py
src/utils/: page_fetcher.py
